fixup fix(Alon) removes dep on viewport on mobile to avoid screen jerking

--- a/src/components/themes/Alon-01/index.module.sass
+++ b/src/components/themes/Alon-01/index.module.sass
@@ -1,8 +1,7 @@
 @import @themes/Alon-01/common
 
 .container
-	height: 100%
+	height: 100vh
 	+from($mainBreakpoint)
-		height: 100vh
 		height: 100dvh
 		display: flex
